# saola

./: .gitignore  FEATURES.md  README.md  agent-ux.md  agent.md  desktop-test-report.md  index.html  package-lock.json  package.json  playwright.config.ts  test-report.md  vite.config.ts
.cursor/rules/: tauri-rust-best-practices.mdc  ux-guidelines.mdc
.github/workflows/: deploy-docs.yml  release.yml
docs-site/: README.md  docusaurus.config.ts  docusaurus.config.ts.bak  package-lock.json
docs-site/docs/: installation.md  introduction.md  troubleshooting.md
e2e/: app.spec.ts
e2e-desktop/: README.md  package-lock.json  package.json  wdio.conf.js
e2e-desktop/specs/: saola.e2e.js
scripts/: README.md  build-all.sh  build-linux.sh  build-macos.sh  build-windows.sh  build.sh
src/: App.css  App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: collection_commands.rs  configure_s3.rs  decrypt_collections.rs  encrypt_collections.rs  environment_commands.rs  get_collections.rs  import_postman.rs  mod.rs  send_request.rs  sync.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: collection_storage.rs  crypto_service.rs  environment_storage.rs  interpolation.rs  mod.rs  request_service.rs  storage_config.rs
src/components/: CodeEditor.css  CodeEditor.tsx  CodeSnippetModal.css  CodeSnippetModal.tsx  ConflictResolution.css  ConflictResolution.tsx  EnvironmentManager.css  EnvironmentManager.tsx  GlobalSearch.css  GlobalSearch.tsx  RequestBuilder.css  (+13 more)
(+15 files in other folders)
