[package]
name = "saola"
version = "0.1.0"
description = "Saola - Secure & Private API Development Platform"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "saola_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
url = "2"
uuid = { version = "1", features = ["v4"] }
directories = "5"
